Version 1.2.3
-----------
- yii-user: we display `username` field only if it is required by the `User` model, so you can disable `username` field in `yii-user`.
- fixed bug when after saving profileCache returned in serialized form
- removed some NOTICE erros and fixed one stupid big with email sending callback (thanks to Komannder)
- fixed bug with imposibility of login with twitter (and other similar SN) despite successful email activation + added callback hoauthCheckAccess() for non `yii-user` ext using
- added Spanish, German and Russian translations (thanks to Komannder and me)

Version 1.2.2
-------------
- Enh#6: support of prefixed table names
- Enh#7: added ability to setup alias (by default is application.config.hoauth) of HybridAuth config file in yii config (Yii::app()->params['hoauth']['configAlias'])
- Enh#8: widget to display social networks that user bond to
- Support of `yii-user` version, when Profile::regMode isn't static property
- Fixed issue when password field apeared, when it should not do so during social network signup
- Support of sending activation email by `yii-user` module
- Added support of `yii-user` banned and not activated account status
- Ability to register a new account with the same SN, when in db still exists SN relation to account that was deleted
- HOAuthWidget moved to widgets directory (see UPGRADE.md)

Version 1.2.1
-------------
- It was decieded to move `HybridAuth` config file to the yii's config diretory and rename to `hoauth.php`. Extension will try to do it automatically, when config diretory is not writable, it will run with config file from old directory, but old directory has the deprecated status.
- fixed bug with to long username, when registering user for `yii-user` extension.
- Support of login from social networks, that returning no email (also added `HUserInfoForm` class).
- updates in installation instructions

Version 1.2
-----------
